# amazon-reviews

./: .env  .env.example  .env.graphql.demo  .env.model.demo  .gitignore  Dockerfile  Makefile  README.md  build.gradle  docker-compose-test.yml  docker-compose.yml  docker-db-down.sh  docker-db-up.sh  pyproject.toml  requirements.prod.cpu.txt  requirements.prod.cuda.txt  requirements.prod.txt  requirements.txt  settings.gradle  template.yaml
.github/workflows/: main.yml
data/: README.md
data/export/: README.md  create_and_export_subset.sql
data/import/: README.md
data/models/: README.md
data/models/blair-roberta-base/: README.md
migrations/: 001_create_category.down.sql  001_create_category.up.sql  002_create_item.down.sql  002_create_item.up.sql  003_create_category_has_item.down.sql  003_create_category_has_item.up.sql  004_create_itemimage.down.sql  004_create_itemimage.up.sql  005_create_itemvideo.down.sql  005_create_itemvideo.up.sql  006_create_itemauthor.down.sql  006_create_itemauthor.up.sql  007_create_item_has_itemimage.down.sql  007_create_item_has_itemimage.up.sql  008_create_item_has_itemvideo.down.sql  008_create_item_has_itemvideo.up.sql  009_create_item_has_itemauthor.down.sql  009_create_item_has_itemauthor.up.sql  010_create_users.down.sql  010_create_users.up.sql  011_create_review.down.sql  011_create_review.up.sql  012_create_reviewimage.down.sql  012_create_reviewimage.up.sql  013_create_user_has_review.down.sql  013_create_user_has_review.up.sql  014_create_review_has_reviewimage.down.sql  014_create_review_has_reviewimage.up.sql  015_create_maincategory.down.sql  015_create_maincategory.up.sql  016_create_item_embed.down.sql  016_create_item_embed.up.sql  016_create_item_embed.up.test.sql  README.md
src/main/java/amazonrev/: App.java
src/main/java/amazonrev/category/: Category.java  CategoryController.java  CategoryPagination.java  CategoryRepository.java  CategorySort.java
src/main/java/amazonrev/config/: Constants.java  GraphQLConfig.java
src/main/java/amazonrev/health/: HealthController.java
src/main/java/amazonrev/item/: Author.java  Image.java  Item.java  ItemAuthor.java  ItemController.java  ItemImage.java  ItemPagination.java  ItemRepository.java  ItemRowMapper.java  ItemSort.java  ItemSummary.java  ItemVideo.java  MainCategory.java  Video.java
src/main/java/amazonrev/parser/: App.java  FileHeaders.java  FileParser.java  ItemParser.java  ReviewParser.java
src/main/java/amazonrev/parser/types/: MainCategory.java  README.md  RawItem.java
src/main/java/amazonrev/recommend/: Embeddable.java  ModelApiClient.java  PythonApiClient.java  RecommendController.java  RecommendItem.java  RecommendRepository.java  VectorPagination.java
src/main/java/amazonrev/review/: Review.java  ReviewController.java  ReviewImage.java  ReviewPagination.java  ReviewRepository.java  ReviewSort.java
src/main/java/amazonrev/reviewer/: Bucket.java  Reviewer.java  ReviewerController.java  ReviewerPagination.java  ReviewerRepository.java  ReviewerRowMapper.java  ReviewerSort.java  User.java
src/main/java/amazonrev/sales/: ItemSales.java  ItemSalesRowMapper.java  SalesController.java  SalesPagination.java  SalesRepository.java  SalesSort.java
src/main/java/amazonrev/types/item/: Author.java  Image.java  Item.java  MainCategory.java  Video.java
src/main/java/amazonrev/types/review/: Image.java  Review.java
src/main/java/amazonrev/util/: Encode.java  Log.java  PagedResults.java  Pagination.java  ResultSet.java  TimeUtils.java
src/main/java/amazonrev/util/exception/: BadRequestException.java  CustomExceptionResolver.java  NotFoundException.java
src/main/python/amazonrev/: app.py  embeddings.py  get_model.py  item_parser.py
src/main/python/amazonrev/lib/: config.py  logger.py  response.py  tensor.py
src/main/resources/: application.properties
src/main/resources/graphql/: schema.graphqls
src/test/: README.md
src/test/java/amazonrev/: AppTests.java
src/test/java/amazonrev/category/: CategoryControllerTests.java  CategoryTests.java
src/test/java/amazonrev/health/: HealthTests.java
src/test/java/amazonrev/item/: ItemControllerTests.java  ItemTests.java
src/test/java/amazonrev/recommend/: RecommendTests.java
src/test/java/amazonrev/review/: ReviewTests.java
src/test/java/amazonrev/reviewer/: ReviewerTests.java
src/test/java/amazonrev/sales/: SalesTests.java
src/test/java/amazonrev/util/: TestUtils.java
src/test/python/: config.py  test_embeddings.py  test_healthz.py
src/test/resources/database/import/: README.md  category.csv  category_has_item.csv  item.csv  item_embed.csv  item_has_itemauthor.csv  item_has_itemimage.csv  item_has_itemvideo.csv  itemauthor.csv  itemimage.csv  itemvideo.csv  review.csv  review_has_reviewimage.csv  reviewimage.csv  user_has_review.csv  users.csv
src/test/resources/graphql-test/category/: categories.graphql  categoriesByItemCount.json  categoriesByItemCountMain.json  categoriesByName.json  categoriesByNameMain.json  categoriesByRatingNumber.json  categoriesByRatingNumberMain.json
src/test/resources/graphql-test/item/: itemByAsin.graphql  itemByAsin.json  itemById.graphql  itemById.json  itemSummaries.graphql  itemSummariesByAvgRating.json  itemSummariesByLowPrice.json  itemSummariesByRatingNumber.json
src/test/resources/graphql-test/recommend/: itemSummariesLimit.graphql  itemSummariesLimit.json  itemSummariesPage.graphql  itemSummariesPage.json
src/test/resources/graphql-test/review/: reviewById.graphql  reviewById.json  reviews.graphql  reviewsByNewest.json  reviewsByVotes.json
src/test/resources/graphql-test/reviewer/: numReviews.graphql  numReviews.json  topReviewers.graphql  topReviewersByNumReviews.json  topReviewersByNumReviews2023.json  topReviewersByVotes.json  topReviewersByVotes2000.json  topReviewersByVotes2017.json
src/test/resources/graphql-test/sales/: topItemSales.graphql  topItemSalesByRatingNumber.json  topItemSalesByVerifPurchase.json
src/test/resources/python/: embedding_create.json
